gccida/c2/peephole2_optimize
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3564:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[0].live_before = bitmap_initialize( &head); 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3565:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[1].live_before = bitmap_initialize( &v64); 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3566:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[2].live_before = bitmap_initialize( &v65); 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3567:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[3].live_before = bitmap_initialize( &v66); 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3568:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[4].live_before = bitmap_initialize( &v67); 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3587:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[0].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3588:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[1].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3589:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[2].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3590:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[3].insn = 0LL; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3591:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[4].insn = global_rtl[0]; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3594:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[4].live_before, v1); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3607:1: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
peep2_insn_data_0[v7].insn = ( rtx)end; 
^~~~~~~~~~~~~~~~~
peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3609:14: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
bitmap_copy( peep2_insn_data_0[peep2_current].live_before, v1); 
             ^~~~~~~~~~~~~~~~~
             peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3629:8: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
insn = peep2_insn_data_0[v16].insn; 
       ^~~~~~~~~~~~~~~~~
       peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3659:21: error: assigning to 'uint64' (aka 'unsigned long long') from incompatible type 'struct rtx_def'
*( _QWORD *)&v42[4] = insn[4]; 
                    ^ ~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3660:24: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v45.rtwint = ( __int64)insn[3].fld[0]; 
                       ^~~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3671:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v45.rtwint), 
  ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3671:18: error: expected expression
( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)v45.rtwint), 
                 ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/recog.c:3694:17: error: use of undeclared identifier 'peep2_insn_data_0'
if ( *( _WORD *)peep2_insn_data_0[v49].insn == 34 ) 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/peephole2_optimize/src/obj/recog.o] Error 1
